--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "apexcharts": "^3.37.2",
+    "axios": "^1.5.1",
     "chart.js": "^4.2.1",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.6.0",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "lodash": "^4.17.21"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "set PORT=8000 && react-scripts start",
